add sonarcloud and fix sonarcloud issues